syntax = "proto3";
package zetachain.zetacore.observer;

import "common/common.proto";
import "gogoproto/gogo.proto";
import "observer/observer.proto";

option go_package = "github.com/zeta-chain/node/x/observer/types";

message CoreParamsList {
  repeated CoreParams core_params = 1;
}
message CoreParams {
  uint64 confirmation_count = 1;
  uint64 gas_price_ticker = 2;
  uint64 in_tx_ticker = 3;
  uint64 out_tx_ticker = 4;
  uint64 watch_utxo_ticker = 5;
  string zeta_token_contract_address = 8;
  string connector_contract_address = 9;
  string erc20_custody_contract_address = 10;
  int64 chain_id = 11;
  int64 outbound_tx_schedule_interval = 12;
  int64 outbound_tx_schedule_lookahead = 13;
}

message ObserverParams {
  common.Chain chain = 1;
  string ballot_threshold = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string min_observer_delegation = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool is_supported = 5;
}

enum Policy_Type {
  option (gogoproto.goproto_enum_stringer) = true;
  group1 = 0;
  group2 = 1;
}

message Admin_Policy {
  Policy_Type policy_type = 1;
  string address = 2;
}

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  repeated ObserverParams observer_params = 1;
  repeated Admin_Policy admin_policy = 2;
  int64 ballot_maturity_blocks = 3;
}
